# reading_comprehension

./: .gitattributes  .gitignore  README.md  create_reading_comp.py  environment.yml  pyproject.toml  requirements.txt  train_7b.py
Data/: all_tasks.parquet
cpp/: hello  main.cpp
data/: .combined_data.csv.kate-swp
data/finetuned/finetuned_model_epoch_2/: config.json
data/finetuned/finetuned_model_epoch_3/: config.json  tokenizer_config.json
data/original_data/: data_chunk_0.parquet
data/reading_comp/: .all_tasks_sample.csv.kate-swp
notebooks/: Data_pulling.ipynb  PEFT_guide.ipynb  Untitled.ipynb  Untitled1.ipynb  huggingface_guide.ipynb
notebooks/.ipynb_checkpoints/: Data_pulling-checkpoint.ipynb  Untitled-checkpoint.ipynb
src/: main.py
src/data/: data_handler.py  hugging_face_data_loader.py  task_creator.py
src/models/: generic_llama.py  generic_llama7b.py  generic_model.py  llama_7b.py  lora_model.py
