[tool.poetry]
name = "reading-comprehension"
version = "0.1.0"
description = ""
authors = ["Kikis <kikispcmr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.1"
pyarrow = "^17.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
