[tool.poetry]
name = "reading-comprehension"
version = "0.1.0"
description = ""
authors = ["Kikis <kikispcmr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.1"
pyarrow = "^17.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
accelerate = "^1.0.0"
peft = "^0.13.1"
bitsandbytes = "^0.44.1"
transformers = "^4.45.2"
trl = "^0.11.2"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
